@@ -1,3 +1,12 @@
+2014-06-26  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Add padding for future expansion to WebKitDOMEventTargetIface
+        https://bugs.webkit.org/show_bug.cgi?id=134298
+
+        Reviewed by Martin Robinson.
+
+        * bindings/gobject/WebKitDOMEventTarget.h:
+
 2014-06-25  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Add support for constants in GObject DOM bindings
